@@ -14,6 +14,7 @@ resolv
 resource
 scl
 signal
+sound
 stat
 stdio
 stdlib
